syntax = "proto3";

import "record_info.proto";

option go_package=".;pb";

message SaveRecordDataRequest {
  oneof data {
    RecordInfo info = 1;
    bytes record_chunk = 2;
  }
}

message SaveRecordDataResponse {
  string uuid = 1;
  uint32 size = 3;
}

service RecordDataService {
  rpc SaveRecordData(stream SaveRecordDataRequest) returns (SaveRecordDataResponse);
}