syntax = "proto3";

option go_package=".;pb";

message RecordInfo {
  string uuid = 1;
  string addr = 2;
  string dirc = 3;
  string year = 4;
  string mont = 5;
  string rday = 6;
  string rnam = 7;
}

message SaveRecordInfoRequest {
    RecordInfo info = 1;
}

message SaveRecordInfoResponse {
  string uuid = 1;
}

service RecordInfoService {
  rpc SaveRecordInfo(SaveRecordInfoRequest) returns (SaveRecordInfoResponse);
}